syntax = "proto3";
package rechargerpc;
option go_package = "vgproj/proto/rechargerpc";

message ReqCreateOrder {
    int64 account_id = 1;
    int32 server_id = 2;
    int64 player_id = 3;
    int32 local_product_id = 4;
    string sdk_product_id = 5;
    string currency = 6;
    int64 amount = 7;
}

message RspCreateOrder {
    int32 code = 1;
    int64 local_order_id = 2;
}
